Initial commit: Project setup with frontend and backend implementation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,22 @@
 # Server Configuration
 PORT=3001
 NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
 
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=password
 DB_NAME=dailyjobboost
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-specific-password
-EMAIL_FROM=DailyJobBoost <noreply@dailyjobboost.com> 
+SMTP_USER=dailyjobboost@gmail.com
+SMTP_PASS=diuk bgyr frxs ueza
+EMAIL_FROM=DailyJobBoost <noreply@dailyjobboost.com>
+
+# Security
+UNSUBSCRIBE_SECRET=your-long-random-string-here 
