--- a/.gitignore
+++ b/.gitignore
@@ -3,40 +3,42 @@ node_modules/
 .pnp
 .pnp.js
 
-# Testing
-coverage/
-
-# Next.js
-.next/
-out/
-build/
-dist/
-
-# Environment files
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDEs and editors
+# IDE and editor files
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# OS
 .DS_Store
-Thumbs.db
 
 # TypeScript
 *.tsbuildinfo
 
-# Logs
-logs
-*.log 
+# Testing
+coverage/
+
+# Debug
+.debug/
+
+# Misc
+.DS_Store
+Thumbs.db 
