refactor: Rename project to HypeMeUp

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001
 
 # Production URL (when deploying)
-NEXT_PUBLIC_FRONTEND_URL=https://dailyjobboost.souravwalke.com
+NEXT_PUBLIC_FRONTEND_URL=https://hypemeup.souravwalke.com
 
 # Optional: Analytics (if you want to add later)
 # NEXT_PUBLIC_GA_ID=
