chore: Update backend environment example for production

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,24 +1,24 @@
 # Server Configuration
 PORT=3001
-NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+NODE_ENV=production
+FRONTEND_URL=https://hypemeup.souravwalke.com
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=your-railway-postgres-host
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=password
-DB_NAME=dailyjobboost
+DB_PASSWORD=your-railway-db-password
+DB_NAME=railway
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=dailyjobboost@gmail.com
-SMTP_PASS=diuk bgyr frxs ueza
-EMAIL_FROM=DailyJobBoost <noreply@dailyjobboost.com>
+SMTP_USER=hypemeup.app@gmail.com
+SMTP_PASS=your-gmail-app-password
+EMAIL_FROM=HypeMeUp <noreply@hypemeup.souravwalke.com>
 
-# Security
-UNSUBSCRIBE_SECRET=your-long-random-string-here
-JWT_SECRET=your-jwt-secret-key-here
-ADMIN_SECRET_KEY=your-admin-registration-key-here 
+# Security (replace with actual values in Railway)
+JWT_SECRET=use-generated-jwt-secret-here
+UNSUBSCRIBE_SECRET=use-generated-unsubscribe-secret-here
+ADMIN_PASSWORD=choose-a-secure-admin-password 
