security: Update env example with generic placeholders and security notes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,14 +11,18 @@ DB_PASSWORD=your-railway-db-password
 DB_NAME=railway
 
 # Email Configuration
+# SECURITY NOTE: Never commit actual SMTP credentials to version control
+# For Gmail, enable 2FA and generate an App Password
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=hypemeup.app@gmail.com
-SMTP_PASS=your-gmail-app-password
-EMAIL_FROM=HypeMeUp <noreply@hypemeup.souravwalke.com>
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-16-char-app-password
+EMAIL_FROM="Your App Name <noreply@yourdomain.com>"
 
-# Security (replace with actual values in Railway)
-JWT_SECRET=use-generated-jwt-secret-here
-UNSUBSCRIBE_SECRET=use-generated-unsubscribe-secret-here
-ADMIN_PASSWORD=choose-a-secure-admin-password 
+# Security Configuration
+# SECURITY NOTE: Generate strong random values for these secrets
+# Use a secure method to generate these values, never commit actual secrets
+JWT_SECRET=replace-with-secure-random-string
+UNSUBSCRIBE_SECRET=replace-with-secure-random-string
+ADMIN_PASSWORD=replace-with-secure-password 
