--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "dailyjobboost-backend",
+  "name": "hypemeup-backend",
   "version": "1.0.0",
-  "description": "Backend for DailyJobBoost - Daily motivational quotes via email",
+  "description": "Backend for HypeMeUp - Daily motivational quotes via email",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
-    "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts"
+    "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
+    "postinstall": "npm run build && npm run typeorm migration:run"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,12 @@
   "type": "commonjs",
   "dependencies": {
     "@types/node-cron": "^3.0.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.20",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,17 +31,11 @@
     "nodemailer": "^6.9.10",
     "pg": "^8.11.3",
     "typeorm": "^0.3.20",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.20",
-    "@types/nodemailer": "^6.4.14",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.1.0"
   }
 }
