--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
-    "postinstall": "npm run build && npm run typeorm migration:run"
+    "prepare:prod": "npm run build && npm run typeorm migration:run"
   },
   "keywords": [],
   "author": "",
