--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
-    "prepare:prod": "npm run build && npm run typeorm migration:run"
+    "prepare:prod": "npm run build && npm run typeorm migration:run",
+    "create-admin": "ts-node scripts/create-admin.ts"
   },
   "keywords": [],
   "author": "",
@@ -39,3 +40,4 @@
     "nodemon": "^3.1.0"
   }
 }
+
