--- a/backend/package.json
+++ b/backend/package.json
@@ -9,20 +9,23 @@
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
     "prepare:prod": "npm run build && npm run typeorm migration:run",
-    "create-admin": "ts-node scripts/create-admin.ts"
+    "create-admin": "ts-node scripts/create-admin.ts",
+    "create-admin-sql": "ts-node scripts/create-admin-sql.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/node-cron": "^3.0.11",
+    "@prisma/client": "^6.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.20",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -30,14 +33,13 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.10",
-    "pg": "^8.11.3",
+    "pg": "^8.13.3",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
-
