feat: improve security and admin management - Add env var handling, remove hardcoded secrets, add admin scripts

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,10 @@
 # Server Configuration
-PORT=3001
-NODE_ENV=production
+PORT=3000
+NODE_ENV=development
 FRONTEND_URL=https://hypemeup.souravwalke.com
 
 # Database Configuration
-DB_HOST=your-railway-postgres-host
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=your-railway-db-password
-DB_NAME=railway
+DATABASE_URL=postgresql://user:password@localhost:5432/database_name
 
 # Email Configuration
 # SECURITY NOTE: Never commit actual SMTP credentials to version control
@@ -17,12 +13,16 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-16-char-app-password
+SMTP_PASS=your-app-specific-password
+SMTP_FROM=your-email@gmail.com
 EMAIL_FROM="Your App Name <noreply@yourdomain.com>"
 
 # Security Configuration
 # SECURITY NOTE: Generate strong random values for these secrets
 # Use a secure method to generate these values, never commit actual secrets
-JWT_SECRET=replace-with-secure-random-string
-UNSUBSCRIBE_SECRET=replace-with-secure-random-string
-ADMIN_PASSWORD=replace-with-secure-password 
+JWT_SECRET=your-secure-jwt-secret-key
+UNSUBSCRIBE_SECRET=your-secure-unsubscribe-key
+ADMIN_PASSWORD=your-secure-admin-password
+
+# Admin Configuration
+ADMIN_SECRET_KEY=your-secure-admin-registration-key 
