--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,42 @@
 # Dependencies
 node_modules/
-.pnp/
+.pnp
 .pnp.js
 
-# Environment variables
-.env
-.env.*
-!.env.example
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Testing
+coverage/
 
-# Build outputs
+# Production
 dist/
 build/
 .next/
 out/
 
-# Logs
-logs/
-*.log
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE/Editor files
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+
+# OS
 .DS_Store
+Thumbs.db
 
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
-
-# Testing
-coverage/
-.nyc_output/
-
-# Debug
-.debug/
-debug.log
+# Logs
+logs/
+*.log
 
 # Backend specific
 backend/dist/
@@ -59,8 +53,6 @@ frontend/build/
 frontend/.vercel/
 
 # Misc
-.DS_Store
-Thumbs.db
 *.pem
 .vercel
 .cache/ 
