--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
     "prepare:prod": "npm run build && npm run typeorm migration:run",
-    "create-admin": "ts-node scripts/create-admin.ts",
-    "create-admin-sql": "ts-node scripts/create-admin-sql.ts"
+    "create-admin": "ts-node src/scripts/create-admin.ts",
+    "create-admin-sql": "ts-node scripts/create-admin-sql.ts",
+    "create-admin-typeorm": "ts-node scripts/create-admin-typeorm.ts",
+    "check-admin": "ts-node src/scripts/check-admin.ts"
   },
   "keywords": [],
   "author": "",
