chore: update Railway configuration for better container stability

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,6 +3,8 @@ builder = "nixpacks"
 buildCommand = "npm install && npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "npm start"
 healthcheckPath = "/api/health"
-restartPolicyType = "on_failure" 
+healthcheckTimeout = 300
+restartPolicyType = "on_failure"
+healthcheckInterval = 30 
