fix: improve server stability and error handling

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -7,4 +7,5 @@ startCommand = "npm start"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
-healthcheckInterval = 30 
+healthcheckInterval = 30
+healthcheckGracePeriod = 60 
