--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -8,4 +8,5 @@ healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 healthcheckInterval = 60
-healthcheckGracePeriod = 300 
+healthcheckGracePeriod = 300
+healthcheckRetries = 5 
