--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -10,4 +10,5 @@ restartPolicyType = "on_failure"
 healthcheckInterval = 60
 healthcheckGracePeriod = 300
 healthcheckRetries = 5
-startTimeout = 300 
+startTimeout = 300
+restartPolicyMaxRetries = 5 
