fix: implement process manager pattern and change restart policy

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -6,9 +6,8 @@ buildCommand = "npm install && npm run build"
 startCommand = "npm start"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
-restartPolicyType = "on_failure"
+restartPolicyType = "always"
 healthcheckInterval = 60
 healthcheckGracePeriod = 300
 healthcheckRetries = 5
-startTimeout = 300
-restartPolicyMaxRetries = 5 
+startTimeout = 300 
