--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
