--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.11.11",
+    "@upstash/qstash": "^2.7.22",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.2.0",
