--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
-    "prepare:prod": "npm run build && npm run typeorm migration:run",
+    "prepare:prod": "npm run clean:prod && npm run build && npm run typeorm migration:run",
+    "clean:prod": "rm -rf node_modules dist package-lock.json && npm install",
     "create-admin": "ts-node src/scripts/create-admin.ts",
     "create-admin-sql": "ts-node scripts/create-admin-sql.ts",
     "create-admin-typeorm": "ts-node scripts/create-admin-typeorm.ts",
