--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
+    "prestart": "npm run clean:modules",
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
-    "prepare:prod": "npm run clean:prod && npm run build && npm run typeorm migration:run",
-    "clean:prod": "rm -rf node_modules dist package-lock.json && npm install",
+    "prepare:prod": "npm run clean:full && npm run build && npm run typeorm migration:run",
+    "clean:modules": "rm -rf node_modules/@upstash && npm install --no-save @upstash/qstash@latest && npm uninstall @upstash/qstash",
+    "clean:full": "rm -rf node_modules dist package-lock.json && npm cache clean --force && npm install",
     "create-admin": "ts-node src/scripts/create-admin.ts",
     "create-admin-sql": "ts-node scripts/create-admin-sql.ts",
     "create-admin-typeorm": "ts-node scripts/create-admin-typeorm.ts",
