--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "prebuild": "echo \"Build starting with cache bust: $RAILWAY_CLEAN_BUILD\"",
+    "build": "npm run clean:full && tsc",
     "prestart": "npm run clean:modules",
     "start": "node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
-    "prepare:prod": "npm run clean:full && npm run build && npm run typeorm migration:run",
+    "prepare:prod": "npm run build && npm run typeorm migration:run",
     "clean:modules": "rm -rf node_modules/@upstash && npm install --no-save @upstash/qstash@latest && npm uninstall @upstash/qstash",
     "clean:full": "rm -rf node_modules dist package-lock.json && npm cache clean --force && npm install",
     "create-admin": "ts-node src/scripts/create-admin.ts",
