chore: prepare for production deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,9 @@ ADMIN_PASSWORD=your-secure-admin-password
 
 # Admin Configuration
 ADMIN_SECRET_KEY=your-secure-admin-registration-key 
+
+# Required Environment Variables
+QSTASH_TOKEN=your-qstash-token
+QSTASH_CURRENT_SIGNING_KEY=your-current-signing-key
+QSTASH_NEXT_SIGNING_KEY=your-next-signing-key
+API_URL=https://your-api-domain.com 
