--- a/backend/package.json
+++ b/backend/package.json
@@ -27,16 +27,19 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.20",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.11.11",
+    "@upstash/qstash": "^2.7.22",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.10",
     "pg": "^8.13.3",
