--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "prebuild": "rm -rf dist",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "npm ci && tsc",
+    "start": "npm ci && node dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs -d src/config/database.ts",
     "prepare:prod": "npm ci && npm run build && npm run typeorm migration:run",
     "create-admin": "ts-node src/scripts/create-admin.ts",
